RESOLVED FIXED49430
SVGFEDisplacementMapElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=49430
Summary SVGFEDisplacementMapElement doesn't support dynamic invalidation
Renata Hodovan
Reported 2010-11-12 00:04:22 PST
SVGFEDisplacementMapElement doesn't support dynamic invalidation
Attachments
Patch for feDisplacementMap properties (778.76 KB, patch)
2010-11-12 00:22 PST, Renata Hodovan
zimmermann: review+
Renata Hodovan
Comment 1 2010-11-12 00:22:16 PST
Created attachment 73711 [details] Patch for feDisplacementMap properties
Nikolas Zimmermann
Comment 2 2010-11-12 02:05:20 PST
Comment on attachment 73711 [details] Patch for feDisplacementMap properties View in context: https://bugs.webkit.org/attachment.cgi?id=73711&action=review > LayoutTests/svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop.js:1 > +// [Name] SVGFEDisplacementMapElement-dom-yChannelSelector-prop.js Name is wrong, should be svgdom-yChannel..
Andreas Kling
Comment 3 2010-11-12 17:07:12 PST
Note You need to log in before you can comment on or make changes to this bug.