WebCore: SVGFEDisplacementMapElement doesn't support dynamic invalidation https://bugs.webkit.org/show_bug.cgi?id=49430

Patch by Renata Hodovan <reni@webkit.org> on 2010-11-12
Reviewed by Nikolas Zimmermann.

The dynamic changes are captured by the svgAttributeChanged function. Invalidate the filter primitive if necessary.

Tests: svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in-attr.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in2-attr.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-dom-scale-attr.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-dom-xChannelSelector-attr.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-dom-yChannelSelector-attr.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in-prop.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in2-prop.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-scale-prop.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-xChannelSelector-prop.html
       svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop.html

* svg/SVGFEDisplacementMapElement.cpp:
(WebCore::SVGFEDisplacementMapElement::svgAttributeChanged):
* svg/SVGFEDisplacementMapElement.h:

LayoutTests: SVGFEDisplacementMapElement doesn't support dynamic invalidation, when attributes change.
https://bugs.webkit.org/show_bug.cgi?id=49430

Patch by Renata Hodovan <reni@webkit.org> on 2010-11-12
Reviewed by Nikolas Zimmermann.

Adding layout tests for feDisplacementMap dynamic changes.

* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in2-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in2-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-scale-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-scale-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-xChannelSelector-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-xChannelSelector-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-yChannelSelector-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-dom-yChannelSelector-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in-prop-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in2-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in2-prop-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-scale-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-scale-prop-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-xChannelSelector-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-xChannelSelector-prop-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop-expected.png: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in-attr.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in2-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-in2-attr.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-scale-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-scale-attr.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-xChannelSelector-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-xChannelSelector-attr.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-yChannelSelector-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-dom-yChannelSelector-attr.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in-prop.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in2-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-in2-prop.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-scale-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-scale-prop.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-xChannelSelector-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-xChannelSelector-prop.html: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop.html: Added.
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-dom-in-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-dom-in2-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-dom-scale-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-dom-xChannelSelector-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-dom-yChannelSelector-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-svgdom-in-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-svgdom-in2-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-svgdom-scale-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-svgdom-xChannelSelector-prop.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFEDisplacementMapElement-svgdom-yChannelSelector-prop.js: Added.
(executeTest):



Canonical link: https://commits.webkit.org/62382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71908 268f45cc-cd09-0410-ab3c-d52691b4dbfc